--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,13 @@
 {
-  "extends": ["next/core-web-vitals"],
+  "extends": ["next", "next/core-web-vitals"],
   "rules": {
     "react/no-unescaped-entities": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "@next/next/no-img-element": "warn"
+  },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
   }
 }
