--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/ui": "^3.0.7",
     "@sanity/vision": "^4.4.1",
+    "@types/nodemailer": "^7.0.1",
     "dotenv": "^17.2.1",
     "lucide-react": "^0.537.0",
     "next": "15.4.5",
     "next-sanity": "^10.0.10",
+    "nodemailer": "^7.0.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sanity": "^4.4.1"
