--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@azure/msal-node": "^3.7.4",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@sanity/client": "^7.8.2",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.1.0",
