--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/nodemailer": "^7.0.1",
     "dotenv": "^17.2.1",
     "lucide-react": "^0.537.0",
-    "next": "15.4.5",
+    "next": "^15.5.4",
     "next-sanity": "^10.0.10",
     "nodemailer": "^7.0.6",
     "react": "19.1.0",
