--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sanity/ui": "^3.0.7",
     "@sanity/vision": "^4.4.1",
     "@types/nodemailer": "^7.0.1",
+    "@vercel/analytics": "^1.5.0",
     "dotenv": "^17.2.1",
     "lucide-react": "^0.537.0",
     "next": "^15.5.4",
