--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@sanity/ui": "^3.0.7",
     "@sanity/vision": "^4.4.1",
     "@types/nodemailer": "^7.0.1",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "dotenv": "^17.2.1",
