--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@azure/msal-node": "^3.7.4",
+    "@marsidev/react-turnstile": "^1.4.2",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@sanity/client": "^7.8.2",
     "@sanity/icons": "^3.7.4",
@@ -17,8 +18,6 @@
     "@sanity/ui": "^3.0.7",
     "@sanity/vision": "^4.4.1",
     "@types/nodemailer": "^7.0.1",
-    "@upstash/ratelimit": "^2.0.6",
-    "@upstash/redis": "^1.35.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "dotenv": "^17.2.1",
